--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,16 @@
 body{
-	margin:40px auto;
-	max-width:650px;
-	line-height:1.6;
-	font-size:18px;
-	color:#444;
-	padding:0 10px;
+
+	background-color: #fcfcfc;
 }
 
 h1, h2, h3{
-	line-height:1.2
+
 }
 
 #q-results li {
-	color: #006fff;
 	cursor: pointer;
-	text-decoration: underline;
+}
+
+nav{
+	height: 100px;
 }
